# LinuxDetours

./: .gitignore  CMakeLists.txt  README.md  build.sh  note.txt  release.sh
LinuxDetours/: DetourDetector.cpp  DetourDetector.h  Makefile  add_reg_prefix.sh  build.sh  detours.cpp  detours.h  disasm.cpp  dump_obj.sh  gen_ins.sh  hook.c  hook.h  hook.sh  main.cpp  note  plthook_elf.cpp  po.c  replace_hard_code.sh  run_hook.sh  run_test.sh  statistics.h  trampoline_mips.cpp
LinuxDetours/config/: dylibs
cmake-modules/: .package.cmake.swp  package.cmake
src/: CMakeLists.txt
src/skyguard/: CMakeLists.txt
src/skyguard/LinuxDetours/: CMakeLists.txt  common.h
src/skyguard/LinuxDetours/base/: ProcessInfo.cpp  ProcessInfo.h
src/skyguard/LinuxDetours/detours/: CMakeLists.txt  barrier.cpp  detours.cpp  detours.h  dump_obj.sh  gen_ins.sh  replace_hard_code.sh  trampoline_mips.cpp  trampoline_mips.cpp.o.elf.dump  trampoline_mips.cpp.o.nm.dump  trampoline_mips.cpp.o.obj.dump  trampoline_mips.cpp.o.obj.dump.disassemble  trampoline_x86.cpp
src/skyguard/LinuxDetours/detours/sdk/: CMakeLists.txt  SGDetour.cpp  SGDetour.h  SGDetourImpl.cpp  SGDetourImpl.h
src/skyguard/LinuxDetours/hook/: CMakeLists.txt  DetourDetector.cpp  DetourDetector.h  hook.c  hook.sh  statistics.cpp  statistics.h
src/skyguard/LinuxDetours/logger/: Logger.cpp  Logger.h  LoggerManager.cpp  LoggerManager.h
src/skyguard/LinuxDetours/tests/: CMakeLists.txt  build.sh  logger_test.cpp  main.cpp  sdk_demo.cpp
src/skyguard/LinuxDetours/util/: CMakeLists.txt
src/skyguard/LinuxDetours/util/spe_detect_util/: CMakeLists.txt
