CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(DETOURS_MAJOR_VERSION 1)
set(DETOURS_MINOR_VERSION 0)
set(DETOURS_PATCH_VERSION 0)
set(DETOURS_BUILD_NO 007)

MESSAGE("CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")
MESSAGE("CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE("CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE("CMAKE_LIBRARY_ARCHITECTURE: ${CMAKE_LIBRARY_ARCHITECTURE}")
message("DETOURS_VERSION: ${DETOURS_MAJOR_VERSION}.${DETOURS_MINOR_VERSION}.${DETOURS_PATCH_VERSION}-${DETOURS_BUILD_NO}")

IF (NOT CPU_COUNT)
    SET(CPU_COUNT 4)
ENDIF()

include_directories(${PROJECT_SOURCE_DIR}/src)
set(CMAKE_VERBOSE_MAKEFILE ON)

set(CPACK_PACKAGE_VENDOR "SkyGuard, Inc.")
set(CPACK_PACKAGE_VERSION ${DETOURS_MAJOR_VERSION}.${DETOURS_MINOR_VERSION}.${DETOURS_PATCH_VERSION}-${DETOURS_BUILD_NO})
set(CPACK_PACKAGE_VERSION_MAJOR ${DETOURS_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${DETOURS_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${DETOURS_PATCH_VERSION})

set(CPACK_GENERATOR TGZ)
set(CPACK_NEOKYLIN7_PACKAGE_ARCHITECTURE neokylin7-ls64)

set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_PROJECT_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules/package.cmake)

ADD_SUBDIRECTORY(src)
include(CPack)
