SET (TARGET detour.test)
FILE(GLOB HEADERS
    "*.h"
    )

FILE(GLOB SOURCES
    "main.cpp"
    )

SET (SDK_DEMO detour.sdk.test)
FILE(GLOB SDK_DEMO_FILES
    "sdk_demo.cpp"
    )
ADD_EXECUTABLE(${SDK_DEMO} ${SDK_DEMO_FILES})
ADD_DEPENDENCIES(${SDK_DEMO} detours_sdk)

SET (LOG4CXX_DEPENDS_STATIC_LIBS
    liblog4cxx.a
    libapr-1.a
    libaprutil-1.a
    libexpat.a
    )

TARGET_LINK_LIBRARIES(${SDK_DEMO} detours_sdk)
TARGET_LINK_LIBRARIES(${SDK_DEMO} -ldl)
TARGET_LINK_LIBRARIES(${SDK_DEMO} ${LOG4CXX_DEPENDS_STATIC_LIBS})

SET (LOGGER_DEMO logger.test)
FILE(GLOB LOGGER_DEMO_FILES
    "logger_test.cpp"
    )
ADD_EXECUTABLE(${LOGGER_DEMO} ${LOGGER_DEMO_FILES})
ADD_DEPENDENCIES(${LOGGER_DEMO} detours_sdk)
TARGET_LINK_LIBRARIES(${LOGGER_DEMO} detours_sdk)
TARGET_LINK_LIBRARIES(${LOGGER_DEMO} ${LOG4CXX_DEPENDS_STATIC_LIBS})

INSTALL(FILES ${SDK_DEMO_FILES} DESTINATION example COMPONENT dev)
INSTALL(FILES "build.sh" DESTINATION example PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ COMPONENT dev)

#set(EXTERNAL_INCLUDE_PATH ${EXTERNAL_PREFIX}/include)
#INSTALL(PROGRAMS ${EXTERNAL_LIB_PATH}/liblog4cxx.a DESTINATION lib COMPONENT dev)
#INSTALL(PROGRAMS ${EXTERNAL_LIB_PATH}/libapr-1.a DESTINATION lib COMPONENT dev)
#INSTALL(PROGRAMS ${EXTERNAL_LIB_PATH}/libaprutil-1.a DESTINATION lib COMPONENT dev)
#INSTALL(PROGRAMS ${EXTERNAL_LIB_PATH}/libexpat.a DESTINATION lib COMPONENT dev)
